syntax = "proto3";

package io.github.helloworlde.grpc;

option java_package = "io.github.helloworlde.grpc";
option java_multiple_files = true;
option java_outer_classname = "HelloWorldGrpc";

service HelloService{
  rpc SayHello(HelloMessage) returns (HelloResponse){
  }
}

message HelloMessage {
  string message = 1;
}

message HelloResponse {
  string message = 1;
}